--- a/SpringMVC/SpringMVC-Rest/src/main/webapp/WEB-INF/templates/user_add.html
+++ b/SpringMVC/SpringMVC-Rest/src/main/webapp/WEB-INF/templates/user_add.html
@@ -6,20 +6,20 @@
     <link rel="stylesheet" th:href="@{/static/css/index_work.css}">
 </head>
 <body>
-<form th:action="@{/user}" method="post">
+<form method="post" th:action="@{/user}">
     <table>
         <tr>
             <th colspan="2">add user</th>
         </tr>
         <tr>
             <td>username</td>
-            <td><input type="text"  name="username"/></td>
+            <td><input name="username" type="text"/></td>
         </tr>
         <tr>
             <td>gender</td>
             <td>
-                <input type="radio" name="gender" value="male">male
-                <input type="radio" name="gender" value="female">female
+                <input name="gender" type="radio" value="male">male
+                <input name="gender" type="radio" value="female">female
             </td>
         </tr>
         <tr>
